--- a/index.bootstrap-4.3.1.css
+++ b/index.bootstrap-4.3.1.css
@@ -8,24 +8,24 @@
   --sand: #f2e2ce;	
   --yellow-green: #d9c873;
   --light-green: #8cc53b;
-  --purple: #6f42c1;
+  --purple: #3f043c;
   --sage-green: #7c8d6a ;
-  --red: #dc3545;
+  --success: #8cc53b;
   --orange: #d85505;
   --crimson: #8d0404;
   --peach: #fa9867;
   --golden-rod: #c7720f;
   --white: #fff;
-  --gray: #6c757d;
-  --gray-dark: #343a40;
-  --primary: #007bff;
-  --secondary: #6c757d;
-  --success: #28a745;
-  --info: #17a2b8;
+  --nav-link: #8cc53b;
+  --nav-link hover: #d85505;
+  --primary: #3f043c;
+  --nav-link: #8cc53b;
+  --success: #8cc53b;
+  --btn-hover: #3f043c;
   --warning: #ffc107;
   --danger: #dc3545;
   --light: #f8f9fa;
-  --dark: #343a40;
+  --dark: #3f043c;
   --breakpoint-xs: 0;
   --breakpoint-sm: 576px;
   --breakpoint-md: 768px;
@@ -34,6 +34,7 @@
   --font-family-sans-serif: Poppins, sans-serif;
 }
 
+
 *,
 *::before,
 *::after {
@@ -41,8 +42,8 @@
 }
 
 html {
-  font-family: Poppons, sans-serif;
-  line-height: 1.2;
+  font-family: Poppins, sans-serif;
+  line-height: 1.15;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
@@ -52,20 +53,19 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 }
 
 body {
+  background-color: #f2e2ce;
   margin: 0;
-  font-family: Poppins;
+  font-family: Poppins, sans-serif,-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #3f043c;
+  color: #212529;
   text-align: left;
-  background-color: #f2e2ce;
 }
 
 [tabindex="-1"]:focus {
   outline: 0 !important;
 }
-
 
 hr {
   box-sizing: content-box;
@@ -78,8 +78,38 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: 0.5rem;
 }
 
+
+.c18 {
+  padding-top: 4.777%;
+  font-family: Poppins;
+  color: #3f043c;
+  font-weight: 600;
+  line-height: 2rem;
+  text-align: justify;
+  
+}
+
+.c24 {
+  font-family: Poppins;
+  color: #3f043c;
+  line-height: 2rem;
+  text-align: justify;
+  font-weight: 500;
+}
+
+.j29 {
+  font-family: Poppins;
+  color:  orangered;
+  line-height: 2rem;
+  text-align: justify;
+  font-weight: BOLD;
+  outline-color: #3f043c;
+  border-color: #3f043c;
+}
+
+
 p {
-  margin-top: 0;
+  margin-top: 1rem;
   margin-bottom: 1rem;
 }
 
@@ -87,6 +117,7 @@ abbr[title],
 abbr[data-original-title] {
   text-decoration: underline;
   -webkit-text-decoration: underline dotted;
+  text-decoration: underline dotted;
   cursor: help;
   border-bottom: 0;
   -webkit-text-decoration-skip-ink: none;
@@ -151,24 +182,15 @@ sup {
   top: -.5em;
 }
 
-
-
-/* BEGIN <a> Tags */
-
-a0 {
-	color: #7c8d6a;
-}
-
 a {
   color: #8ec63f;
-  font-size: 1.5rem;
   text-decoration: none;
   background-color: transparent;
 }
 
 a:hover {
-  color: #c7720f;
-  text-decoration: none;
+  color:  #c7720f;
+  text-decoration: underline;
 }
 
 a:not([href]):not([tabindex]) {
@@ -184,14 +206,6 @@ a:not([href]):not([tabindex]):hover, a:not([href]):not([tabindex]):focus {
 a:not([href]):not([tabindex]):focus {
   outline: 0;
 }
-
-
-
-
-/* END <a> Tags*/
-
-
-
 
 pre,
 code,
@@ -225,7 +239,13 @@ table {
   border-collapse: collapse;
 }
 
-
+caption {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+  color: #6c757d;
+  text-align: left;
+  caption-side: bottom;
+}
 
 th {
   text-align: inherit;
@@ -382,7 +402,6 @@ h1, .h1 {
 
 h2, .h2 {
   font-size: 2rem;
-  font-weight: 800;
 }
 
 h3, .h3 {
@@ -558,8 +577,8 @@ pre code {
 
 .container {
   width: 100%;
-  padding-right: 5px;
-  padding-left: 5px;
+  padding-right: 15px;
+  padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
 }
@@ -601,7 +620,7 @@ pre code {
   display: flex;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  margin-right: -15px;
+  margin-right: -z5px;
   margin-left: -15px;
 }
 
@@ -624,7 +643,7 @@ pre code {
 .col-xl-auto {
   position: relative;
   width: 100%;
-  padding-right: 15px;
+  padding-right: 5px;
   padding-left: 15px;
 }
 
@@ -1037,7 +1056,7 @@ pre code {
   }
   .col-md-4 {
     -ms-flex: 0 0 33.333333%;
-    flex: 0  33.333333%;
+    flex: 0 0 33.333333%;
     max-width: 33.333333%;
   }
   .col-md-5 {
@@ -1865,7 +1884,7 @@ pre code {
   border: 0;
 }
 
-.form-control {
+/*.form-control {
   display: block;
   width: 100%;
   height: calc(1.5em + 0.75rem + 2px);
@@ -1879,7 +1898,7 @@ pre code {
   border: 1px solid #ced4da;
   border-radius: 0.25rem;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-}
+}*/
 
 @media (prefers-reduced-motion: reduce) {
   .form-control {
@@ -2387,9 +2406,10 @@ textarea.form-control {
 }
 
 .btn {
+  hoover: #3f043c;
   display: inline-block;
-  font-weight: 400;
-  color: #212529;
+  font-weight: 600;
+  color: #8cc53b;
   text-align: center;
   vertical-align: middle;
   -webkit-user-select: none;
@@ -2397,11 +2417,11 @@ textarea.form-control {
   -ms-user-select: none;
   user-select: none;
   background-color: transparent;
-  border: 1px solid transparent;
+  border-color: #8cc53b;
   padding: 0.375rem 0.75rem;
-  font-size: 1rem;
+  font-size: 1.25rem;
   line-height: 1.5;
-  border-radius: 0.25rem;
+  border-radius: 0.55rem;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
@@ -2412,13 +2432,14 @@ textarea.form-control {
 }
 
 .btn:hover {
-  color: #212529;
+  color:  #3f043c;
+  font-weight: 600;
   text-decoration: none;
 }
 
 .btn:focus, .btn.focus {
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+  box-shadow: 0 0 0 0.2rem #8cc53b;
 }
 
 .btn.disabled, .btn:disabled {
@@ -2766,19 +2787,15 @@ fieldset:disabled a.btn {
   box-shadow: 0 0 0 0.2rem rgba(108, 117, 125, 0.5);
 }
 
-
-/* BEGIN  LOG IN Button */
-
-
 .btn-outline-success {
-  color: #8ec63f;
-  border-color: #8ec63f;
+  color: #28a745;
+  border-color: #28a745;
 }
 
 .btn-outline-success:hover {
   color: #fff;
-  background-color: #8ec63f;
-  border-color: #8ec63f;
+  background-color: #28a745;
+  border-color: #28a745;
 }
 
 .btn-outline-success:focus, .btn-outline-success.focus {
@@ -2793,18 +2810,14 @@ fieldset:disabled a.btn {
 .btn-outline-success:not(:disabled):not(.disabled):active, .btn-outline-success:not(:disabled):not(.disabled).active,
 .show > .btn-outline-success.dropdown-toggle {
   color: #fff;
-  background-color: #8ec63f;
-  border-color: #8ec63f;
+  background-color: #28a745;
+  border-color: #28a745;
 }
 
 .btn-outline-success:not(:disabled):not(.disabled):active:focus, .btn-outline-success:not(:disabled):not(.disabled).active:focus,
 .show > .btn-outline-success.dropdown-toggle:focus {
   box-shadow: 0 0 0 0.2rem rgba(40, 167, 69, 0.5);
 }
-
-
-/*END LOG IN button */
-
 
 .btn-outline-info {
   color: #17a2b8;
@@ -3311,7 +3324,7 @@ input[type="button"].btn-block {
 }
 
 .btn-group > .btn:hover,
-.btn-group-vertical {
+.btn-group-vertical > .btn:hover {
   z-index: 1;
 }
 
@@ -3386,8 +3399,8 @@ input[type="button"].btn-block {
   justify-content: center;
 }
 
-.btn-group> .btn,
-.btn-group > .btn-group {
+.btn-group-vertical > .btn,
+.btn-group-vertical > .btn-group {
   width: 100%;
 }
 
@@ -4069,23 +4082,12 @@ input[type="button"].btn-block {
   }
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-/*   BEGIN Navigation Top */
-
-
+#link_color1 {
+	 color: #8ec63f;
+}
 
 .nav {
+  color: #8ec63f;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
@@ -4105,10 +4107,87 @@ input[type="button"].btn-block {
   text-decoration: none;
 }
 
+.nav-link.disabled {
+  color: #3f043c;
+  font-weight: 750;;
+  pointer-events: none;
+  cursor: default;
+}
 
+.nav-tabs {
+  border-bottom: 1px solid #dee2e6;
+}
+
+.nav-tabs .nav-item {
+  margin-bottom: -1px;
+}
+
+.nav-tabs .nav-link {
+  border: 1px solid transparent;
+  border-top-left-radius: 0.25rem;
+  border-top-right-radius: 0.25rem;
+}
+
+.nav-tabs .nav-link:hover, .nav-tabs .nav-link:focus {
+  border-color: #8cc53b #8cc53b #8cc53b;
+}
+
+.nav-tabs .nav-link.disabled {
+  color: #6c757d;
+  background-color: transparent;
+  border-color: transparent;
+}
+
+.nav-tabs .nav-link.active,
+.nav-tabs .nav-item.show .nav-link {
+  color: #8ec63f;
+  background-color: #fff;
+  border-color: #dee2e6 #dee2e6 #fff;
+}
+
+.nav-tabs .dropdown-menu {
+  margin-top: -1px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+
+.nav-pills .nav-link {
+  border-radius: 0.25rem;
+}
+
+.nav-pills .nav-link.active,
+.nav-pills .show > .nav-link {
+  color: #fff;
+  background-color: #8ec63f;
+}
+
+.nav-fill .nav-item {
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
+  text-align: center;
+}
+
+.nav-justified .nav-item {
+  -ms-flex-preferred-size: 0;
+  flex-basis: 0;
+  -ms-flex-positive: 1;
+  flex-grow: 1;
+  text-align: center;
+}
+
+.tab-content > .tab-pane {
+  display: none;
+}
+
+.tab-content > .active {
+  display: block;
+}
 
 .navbar {
-  background-color: #3f043c; 
+  background-color: #3f043c;
+  font-size: 1.5rem;
+  font-weight: 700;
+  position: relative;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
@@ -4116,10 +4195,35 @@ input[type="button"].btn-block {
   -ms-flex-align: center;
   align-items: center;
   -ms-flex-pack: justify;
-  justify-content: space-around;
-  padding: 0.5rem 1.5rem;
+  justify-content: space-between;
+  padding: 0.5rem 1rem;
 }
 
+.navbar > .container,
+.navbar > .container-fluid {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -ms-flex-align: center;
+  align-items: center;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+
+/*.navbar-brand {
+  display: inline-block;
+  padding-top: 0.3125rem;
+  padding-bottom: 0.3125rem;
+  margin-right: 1rem;
+  font-size: 1.25rem;
+  line-height: inherit;
+  white-space: nowrap;
+}
+
+.navbar-brand:hover, .navbar-brand:focus {
+  text-decoration: none;
+}*/
 
 .navbar-nav {
   display: -ms-flexbox;
@@ -4131,6 +4235,21 @@ input[type="button"].btn-block {
   list-style: none;
 }
 
+.navbar-nav .nav-link {
+  padding-right: 0;
+  padding-left: 0;
+}
+
+.navbar-nav .dropdown-menu {
+  position: static;
+  float: none;
+}
+
+.navbar-text {
+  display: inline-block;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
 
 .navbar-collapse {
   -ms-flex-preferred-size: 100%;
@@ -4138,12 +4257,22 @@ input[type="button"].btn-block {
   -ms-flex-positive: 1;
   flex-grow: 1;
   -ms-flex-align: center;
-  align-items: right;
+  align-items: center;
 }
 
+.navbar-toggler {
+  color: #8ec63f;
+  padding: 0.25rem 0.75rem;
+  font-size: 1.25rem;
+  line-height: 1;
+  background-color: #7c8d6a;
+  border: 1px solid transparent;
+  border-radius: 0.25rem;
+}
 
-
-
+.navbar-toggler:hover, .navbar-toggler:focus {
+  text-decoration: none;
+}
 
 .navbar-toggler-icon {
   display: inline-block;
@@ -4174,13 +4303,18 @@ input[type="button"].btn-block {
     -ms-flex-direction: row;
     flex-direction: row;
   }
-  
+  .navbar-expand-sm .navbar-nav .dropdown-menu {
+    position: absolute;
+  }
   .navbar-expand-sm .navbar-nav .nav-link {
     padding-right: 0.5rem;
     padding-left: 0.5rem;
   }
-	
-  
+  .navbar-expand-sm > .container,
+  .navbar-expand-sm > .container-fluid {
+    -ms-flex-wrap: nowrap;
+    flex-wrap: nowrap;
+  }
   .navbar-expand-sm .navbar-collapse {
     display: -ms-flexbox !important;
     display: flex !important;
@@ -4258,13 +4392,12 @@ input[type="button"].btn-block {
   }
   .navbar-expand-lg .navbar-nav .nav-link {
     padding-right: 0.5rem;
-    padding-left: 1.5rem;
+    padding-left: 0.5rem;
   }
   .navbar-expand-lg > .container,
   .navbar-expand-lg > .container-fluid {
     -ms-flex-wrap: nowrap;
     flex-wrap: nowrap;
-	  text-decoration: none;
   }
   .navbar-expand-lg .navbar-collapse {
     display: -ms-flexbox !important;
@@ -4363,15 +4496,11 @@ input[type="button"].btn-block {
   display: none;
 }
 
-.navbar-brand {
-	vertical-align: -100px;
-}
-
 .navbar-light .navbar-brand {
   color: rgba(0, 0, 0, 0.9);
 }
 
-.navbar-light .navbar-brand:hover, .navbar-light  {
+.navbar-light .navbar-brand:hover, .navbar-light .navbar-brand:focus {
   color: rgba(0, 0, 0, 0.9);
 }
 
@@ -4399,9 +4528,9 @@ input[type="button"].btn-block {
   border-color: rgba(0, 0, 0, 0.1);
 }
 
-.navbar-light .navbar-toggler-icon {
+/*.navbar-light .navbar-toggler-icon {
   background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgba(0, 0, 0, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
-}
+}*/
 
 .navbar-light .navbar-text {
   color: rgba(0, 0, 0, 0.5);
@@ -4416,7 +4545,7 @@ input[type="button"].btn-block {
 }
 
 .navbar-dark .navbar-brand {
-  color: #fff;
+  color: #8cc53b;;
 }
 
 .navbar-dark .navbar-brand:hover, .navbar-dark .navbar-brand:focus {
@@ -4424,7 +4553,7 @@ input[type="button"].btn-block {
 }
 
 .navbar-dark .navbar-nav .nav-link {
-  color: rgba(255, 255, 255, 0.5);
+  color: #8cc53b;;
 }
 
 .navbar-dark .navbar-nav .nav-link:hover, .navbar-dark .navbar-nav .nav-link:focus {
@@ -4459,17 +4588,9 @@ input[type="button"].btn-block {
   color: #fff;
 }
 
-.navbar-dark .navbar-text a:hover, .navbar-dark .navbar-text {
+.navbar-dark .navbar-text a:hover, .navbar-dark .navbar-text a:focus {
   color: #fff;
 }
-
-
-
-
-
-
-
-
 
 .card {
   position: relative;
@@ -4885,11 +5006,6 @@ a.badge:hover, a.badge:focus {
   border-radius: 10rem;
 }
 
-
-
-
-
-
 .badge-primary {
   color: #fff;
   background-color: #007bff;
@@ -4922,7 +5038,7 @@ a.badge-secondary:focus, a.badge-secondary.focus {
 
 .badge-success {
   color: #fff;
-  background-color: #8ec63f;
+  background-color: #28a745;
 }
 
 a.badge-success:hover, a.badge-success:focus {
