--- a/index.bootstrap-4.3.1.css
+++ b/index.bootstrap-4.3.1.css
@@ -621,7 +621,7 @@ pre code {
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   margin-right: -z5px;
-  margin-left: -15px;
+ /* margin-left: -15px;*/
 }
 
 .no-gutters {
@@ -4596,8 +4596,8 @@ input[type="button"].btn-block {
   position: relative;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-direction: column;
-  flex-direction: column;
+  //*-ms-flex-direction: column;
+  flex-direction: column;*//
   min-width: 0;
   word-wrap: break-word;
   background-color: #fff;
@@ -10078,4 +10078,6 @@ a.text-dark:hover, a.text-dark:focus {
     border-color: #dee2e6;
   }
 }
+
+
 /*# sourceMappingURL=bootstrap.css.map */
