--- a/index.bootstrap-4.3.1.css
+++ b/index.bootstrap-4.3.1.css
@@ -86,7 +86,7 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 600;
   line-height: 2rem;
   text-align: justify;
-  
+  border: 1px solid blue;
 }
 
 .c24 {
